syntax = "proto3";

package nats.api;

option cc_enable_arenas = true;
option go_package = "github.com/fluffy-bunny/fluffycore/nats/api/annotations;annotations";
option java_multiple_files = true;
option java_outer_classname = "HandlerProto";
option java_package = "com.nats.api";
option objc_class_prefix = "NAPI";

message HandlerRule {
    string parameterized_token = 1;
    string wildcard_token = 2;
}